@@ -1,8 +1,8 @@
 ﻿year,title,authors,conference,conference_url,comment,meta_1,meta_1-url,meta_2,meta_2-url,meta_3,meta_3-url,meta_4,meta_4-url
 arXiv,Understanding News Thumbnail Representativeness by Counterfactual Text-Guided Contrastive Language-Image Pretraining,"Yejun Yoon, Seunghyun Yoon, Kunwoo Park",0,0,0,pdf,https://arxiv.org/pdf/2402.11159.pdf,0,0,0,0,0,0
 arXiv,"PDFTriage: Question Answering over Long, Structured Documents","Jon Saad-Falcon, Joe Barrow, Alexa Siu, Ani Nenkova, Seunghyun Yoon, Ryan A. Rossi, Franck Dernoncourt",0,0,0,pdf,https://arxiv.org/pdf/2309.08872.pdf,0,0,0,0,0,0
-arXiv,Multilingual Sentence-Level Semantic Search using Meta-Distillation Learning,"Meryem M'hamdi, Jonathan May, Franck Dernoncourt, Trung Bui, Seunghyun Yoon",0,0,0,pdf,https://arxiv.org/pdf/2309.08185.pdf,0,0,0,0,0,0
 arXiv,MVMR: Evaluating Natural Language Video Localization Bias over Multiple Reliable Videos Pool,"Nakyeong Yang, Minsung Kim, Seunghyun Yoon, Joongbo Shin, Kyomin Jung",0,0,0,pdf,https://arxiv.org/pdf/2309.16701.pdf,0,0,0,0,0,0
+2024,Multilingual Sentence-Level Semantic Search using Meta-Distillation Learning,"Meryem M'hamdi, Jonathan May, Franck Dernoncourt, Trung Bui, Seunghyun Yoon",SIGIR 2024,https://sigir-2024.github.io/,0,pdf,https://arxiv.org/pdf/2309.08185.pdf,0,0,0,0,0,0
 2024,PEEB: Part-based Bird Classifiers with an Explainable and Editable Language Bottleneck,"Thang M. Pham, Peijie Chen, Tin Nguyen, Seunghyun Yoon, Trung Bui, Anh Nguyen",NAACL 2024 Findings,https://2024.naacl.org/,0,pdf,https://arxiv.org/pdf/2403.05297.pdf,0,0,0,0,0,0
 2024,Scaling Up Video Summarization Pretraining with Large Language Models,"Dawit Mureja Argaw, Seunghyun Yoon, Fabian Caba Heilbron, Hanieh Deilamsalehy, Trung Bui, Zhaowen Wang, Franck Dernoncourt, Joon Son Chung ",CVPR 2024,https://cvpr.thecvf.com/,0,0,0,0,0,0,0,0,0
 2024,Fine-tuning CLIP Text Encoders with Two-step Paraphrasing,"Hyunjae Kim, Seunghyun Yoon, Trung Bui, Handong Zhao, Quan Tran, Franck Dernoncourt, Jaewoo Kang",EACL 2024 Findings,https://2024.eacl.org/,0,pdf,https://arxiv.org/pdf/2402.15120.pdf,0,0,0,0,0,0
